varnish-pg/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      containers:
      - name: simple-server
        image: alifyasa/simple-server:latest
        ports:
        - containerPort: 80
