varnish-pg/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-service
spec:
  type: NodePort
  selector:
    app: simple-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
