varnish-pg/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: varnish-pg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: varnish-pg.lintasarta.alifyasa.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish-pg-service
            port:
              number: 80
